# pinbot-rs

./: .gitignore  Cargo.toml
.github/workflows/: artifact.yml
src/: main.rs
