[package]
name = "pinbot-rs"
version = "0.1.2"
edition = "2021"

[dependencies]
twilight-http-ratelimiting = "0.13"
twilight-http = "0.13"
twilight-gateway = "0.13"
twilight-model = "0.13"
twilight-util = { default-features = false, features = ["builder"], version = "0.13" }
# twilight-http-ratelimiting = { path = "../twilight/twilight-http-ratelimiting" }
# twilight-http = { path = "../twilight/twilight-http" }
# twilight-gateway = { path = "../twilight/twilight-gateway" }
# twilight-model = { path = "../twilight/twilight-model" }
# twilight-util = { default-features = false, features = ["builder"], path = "../twilight/twilight-util" }
futures = "0.3.21"
serde = "1.0"
serde_json = "1.0"
url = "2.2.2"
lazy_static = "1.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "fs"]
default-features = false

[profile.release]
lto = true
debug = false
opt-level = "z"
overflow-checks = false
incremental = true
panic = "abort"