[package]
name = "pinbot-rs"
version = "0.1.4"
edition = "2021"

[dependencies]
twilight-http-ratelimiting = "0.14"
twilight-http = "0.14"
twilight-gateway = "0.14"
twilight-model = "0.14"
twilight-util = { default-features = false, features = ["builder"], version = "0.14" }
futures = "0.3.21"
serde = "1.0"
serde_json = "1.0"
url = "2.2.2"
lazy_static = "1.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "fs"]
default-features = false

[profile.release]
lto = true
debug = false
opt-level = "z"
overflow-checks = false
incremental = true
panic = "abort"
strip = true